# qbinary

./: README.md  meson.build  pyproject.toml  tox.ini
.github/workflows/: release.yml
src/qbinary/: __init__.py  __version__.py  abc.py  basic_block.py  disassembler.py  function.py  instruction.py  meson.build  operand.py  program.py  types.py  utils.py  utils.pyi
src/qbinary/backend/: meson.build
src/qbinary/backend/binexport/: __init__.py  basic_block.py  binexport_orig.py  function.py  instruction.py  meson.build  operand.py  program.py
src/qbinary/backend/capstone/: __init__.py  instruction.py  meson.build  operand.py
src/qbinary/backend/ida/: __init__.py  basic_block.py  function.py  instruction.py  meson.build  operand.py  program.py
src/qbinary/backend/quokka/: __init__.py  basic_block.py  function.py  instruction.py  meson.build  operand.py  program.py
tests/: test_binexport.py  test_common.py  test_quokka.py
tests/data/: build.sh  sample.c  sample_clang_O0_x64_g  sample_clang_O0_x64_g.BinExport  sample_clang_O0_x64_g.quokka  sample_clang_O0_x64_s  sample_clang_O0_x64_s.BinExport  sample_clang_O0_x64_s.quokka  sample_clang_O0_x86_g  sample_clang_O0_x86_g.BinExport  sample_clang_O0_x86_g.quokka  sample_clang_O0_x86_s  sample_clang_O0_x86_s.BinExport  sample_clang_O0_x86_s.id0  sample_clang_O0_x86_s.id1  sample_clang_O0_x86_s.id2  sample_clang_O0_x86_s.nam  sample_clang_O0_x86_s.quokka  sample_clang_O2_x64_g  sample_clang_O2_x64_g.BinExport  sample_clang_O2_x64_g.quokka  sample_clang_O2_x64_s  sample_clang_O2_x64_s.BinExport  sample_clang_O2_x64_s.quokka  sample_clang_O2_x86_g  sample_clang_O2_x86_g.BinExport  sample_clang_O2_x86_g.quokka  sample_clang_O2_x86_s  sample_clang_O2_x86_s.BinExport  sample_clang_O2_x86_s.quokka  sample_gcc_O0_x64_g  sample_gcc_O0_x64_g.BinExport  sample_gcc_O0_x64_g.quokka  sample_gcc_O0_x64_s  sample_gcc_O0_x64_s.BinExport  sample_gcc_O0_x64_s.quokka  sample_gcc_O0_x86_g  sample_gcc_O0_x86_g.BinExport  sample_gcc_O0_x86_g.quokka  sample_gcc_O0_x86_s  (+14 more)
