[build-system]
requires = ["meson-python>=0.7.0", "meson>=1.1.0"]
build-backend = "mesonpy"

[project]
name = "qbinary"
description = "QBinary is a framework meant to offer a stable universal API over binaries"
authors = [{ name = "Quarkslab", email = "diffing@quarkslab.com" }]
license = { text = "Apache Software License (Apache License, Version 2)" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = [
    "multimethod",
    "enum_tools",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/quarkslab/qbinary"
Repository = "https://github.com/quarkslab/qbinary"
Documentation = "https://github.com/quarkslab/qbinary"

[project.optional-dependencies]
binexport = [
    "python-binexport>=0.3.2",
    "capstone>=5.0.1",
]
dev = ["tox"]

[tool.black]
line-length = 100
target-version = ['py313']
