[build-system]
requires = ["meson-python>=0.7.0", "meson>=1.1.0"]
build-backend = "mesonpy"

[project]
name = "qbinary"
description = "QBinary is a framework meant to offer a stable universal API over binaries"
authors = [{ name = "Quarkslab", email = "diffing@quarkslab.com" }]
license = { text = "Apache Software License (Apache License, Version 2)" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "multimethod",
    "enum_tools",
    "python-binexport>=0.4.0",
    "capstone>=5.0.1",
    "quokka-project[pypcode]>=0.6.1",
    "networkx"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/quarkslab/qbinary"
Repository = "https://github.com/quarkslab/qbinary"
Documentation = "https://github.com/quarkslab/qbinary"

[project.optional-dependencies]
dev = ["tox"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow",
    "binexport: marks tests that involve binexport",
    "quokka: marks tests that involve quokka",
    "capstone: marks tests that involve capstone",
]