python_sources = [files(
    '__init__.py',
    '__version__.py',
    'abc.py',
    'disassembler.py',
    'program.py',
    'function.py',
    'basic_block.py',
    'instruction.py',
    'operand.py',
    'types.py',
    'utils.py',
)]

py.install_sources(
    python_sources,
    subdir: 'qbinary'
)

subdir('backend')